v0.7.0
- rework single cell ref-guided and denovo pipes so isoform ID happens at the cluster-level, but quant is more simply performed post gtf-merge step in pseudobulk-all mode
- updating the LRAA_globals to "max_dist_between_alt_TSS_sites": 50 from earlier zero setting
- adding wiki as submodule
- adding splice pattern eval support: splice_patterns_tsv_to_bed.py, segment_LRAA_GTF_by_shared_exon_intervals.py
- adding diff iso usage analysis notebook template including isoform structure, expression, and umap expr
- making LRAA runner less verbose in WDL for Terra batch API compatibility


v0.6.0
- incorporate splice pattern codes into expr.quant and tracking files
- include splice pattern based sparse matrix
- update annotated features in sparse matrices including splice patterns and include separate id mapping file with new vs. old ids.
- WDL update for sc-cluster-guided to separately tar tracking and gtfs for init vs. final
- sc-cluster-guided gtf merging improvements for handling alt TSS and polyA
- including quant-only option for single cell cluster-guided pipe


v0.5.0
- cache pretty alignments for reuse

v0.4.0
- overhaul to leverage the multipaths during quant instead of the individual read assignments.
- expose options for how single cell data are tagged in bam files. Default are CB,XM tags for cell barcodes and umis.


v0.3.0
- public release after testing


v0.2.37
- refined SQANTI-like categories, including code-level tests and documentation
- refactored EM code
- stricter rules around polyA site identification
- simplified partial isoform filtering logic
- setting max spur length to 13 instead of 5
- reset exon coverage vals post pretty alignment corrected alignments stag
- added region extractor utility for troubleshooting individual regions or genes in minigenome-style
- disabling MAPQ=0 by default
- incorporating a unique read support rule for novel isoforms

v0.2.36
- new sqanti-like classes updated w/ tests and better resolved SE categories